main.tf
terraform {
    required_providers {
    aws = {
        source  = "hashicorp/aws"
        version = "~> 5.0"
    }
    }
}
locals {
  vpc_id           = "vpc-09385fb84da0129d6"
  subnet_id        = "subnet-07f8e3450c6e48207"
  ssh_user         = "ubuntu"
  key_name         = "ans-terraform"
  private_key_path = "~/Downloads/ans-terraform.pem"
}

provider "aws" {
  region = "us-east-1"
}

resource "aws_security_group" "nginx" {
  name   = "nginx_access"
  vpc_id = local.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "nginx" {
  ami                         = "ami-0fc5d935ebf8bc3bc"
  subnet_id                   = "subnet-07f8e3450c6e48207"
  instance_type               = "t2.micro"
  associate_public_ip_address = true
  security_groups             = [aws_security_group.nginx.id]
  key_name                    = local.key_name

  provisioner "remote-exec" {
    inline = ["echo 'Wait until SSH is ready'"]

    connection {
      type        = "ssh"
      user        = local.ssh_user
      private_key = file(local.private_key_path)
      host        = aws_instance.nginx.public_ip
    }
  }
  provisioner "local-exec" {
    command ="ansible-playbook  -i ${aws_instance.nginx.public_ip}, --private-key ${local.private_key_path} copy.yaml"
  }
}

output "nginx_ip" {
  value = aws_instance.nginx.public_ip
}
